--- a/Class18CSS/index.html
+++ b/Class18CSS/index.html
@@ -8,8 +8,22 @@
     <link rel="stylesheet" href="../CSS/reset.css" />
     <link rel="stylesheet" href="../CSS/normalize.css" />
   </head>
-  <body>
-    <a href="html/1.object-fit.html">Object-fit</a>
-    <a href="html/2.reset.html">resetCss</a>
+  <br>
+    <a href="./html/1.object-fit.html">Object-fit</a></br>
+    <a href="./html/2.reset.html">resetCss</a></br>
+    <a href="./html/3.normalize.html">normalize</a></br>
+    <a href="./html/4.flexbox.html">flexbox</a></br>
+    <a href="./html/5.centering.html">centering</a></br>
+    <a href="./html/6.grid.html">GridCSS</a></br>
+   
+    <a href="./html/7.gradient.html">Gradient CSS</a></br>
+    <a href="./html/8.pseudo.html">PseudoCSS</a></br>
+    <a href="./html/9.calc.html">Calc CSS</a></br>
+    <a href="./html/10.transform.html">Transform CSS</a>
+    </br>
+<a href="./html/11.keyframes.html">Key Frame css</a></html></br>
+<a href="./html/12.responsive.html">Responsive css</a></br>
+<a href="./html/13.variable.html">Variable css</a></br>
+
   </body>
 </html>
